2006.05.10: David Nichols
	* implemented a workaround to per-thread signal masks bug on Darwin by
	  calling sigprocmask() after pthread_sigmask() only on Darwin

2006.05.09: David Nichols
	* re-implemented safe signal handling to use a dedicated thread that
	  blocks on the receipt of signals with qore handlers.  fixed fork()
	  handling.
	* reset default signal mask in new process after fork()

2006.05.08: David Nichols
	* fixed a bug in signal handling when the handler is removed from within
	  the handler

2006.05.07: David Nichols
	* fixed a bug where the parser was accepting exp =~ exp but crashing if
	  the second exp was not a string
	* implemented regular expressions case statements

2006.05.06: David Nichols
	* implemented binary versions of digest functions (return binary objects
	  instead of strings): MD2_bin(), MD4_bin(), MD5_bin(), SHA_bin(), 
	  SHA1_bin(), DSS_bin(), DSS1_bin(), MDC2_bin(), RIPE160_bin()

2006.04.26: David Nichols
	* made assignments such as 
	  my ($a, $b, $c) = (1, 2, 3)
	  finally legal...
	* added CallReference constant for call reference (return value of 
	  type() for call reference arguments)
	* fixed a bug in SSL handling for server sockets; if an SSL connection is
	  not established on an attempted connection then a segmentation fault
	  was generated when the Socket object was deleted

2006.04.25: David Nichols
	* implemented parseBase64StringToString(), made BinaryObject::getPtr()
	  return a const void *
	* fixed a bug in HTTPClient where exceptions were not being thrown for
	  HTTP response codes indicating an error

2006.04.21: David Nichols
	* fixed a race condition on platforms without atomic reference counting
	  operations related to the SMP cache invalidation optimization

2006.04.19: David Nichols
	* fixed some oracle and tibae compile bugs
	* use umem on Solaris for memory allocation if available
	* fixed some sybase/mssql compile bugs on Solaris
	* fixed an obscure bug parsing block comments