@@ -34,6 +34,7 @@ sub testInit($q)
     $props.RepoURL = "./new.dat";
     $props.ConfigURL = "/tibco/private/adapter/testAdapter";
     my $classes.Test = "/tibco/public/class/ae/Test";
+    $classes.i8 = "/tibco/public/ae/scalar/i8";
 
     print("initializing TIBCO session: \n");
     my $adapter = new TibcoAdapter("rvSession", $props, $classes);#, "8504", "172.23.3.137", "172.23.5.143:7500");
@@ -133,7 +134,7 @@ sub newTest()
 {
     my $subject = Subject + ".1";
 
-    my $string = "hello: Ã¤Ã¼Ã¶Ã";
+    my $string = "hello: äöüßÖÄÜíìñéè";
     $string = convert_encoding($string, "ISO-8859-1");
     #print(dbg_node_info($string));
 
